retrieveUnpackaged/objects/Zip_Code__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedAt__c</fullName>
        <label>CreatedAt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zip__c</fullName>
        <label>zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip_code__c</fullName>
        <label>zip code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Zip Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zip Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>